Added the ability to manually toggle cells

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 </head>
 <body>
     <canvas id="mainCanvas" width="800" height="800" style="border:1px solid #000000;"></canvas>
+    <button id="start" type="button" class="startButton">Start/Stop
+    </button>
     <script src="scripts/main.js" class="img1"></script>
+    <link rel="stylesheet" type="text/css" href="main.css">
 </body>
 </html>
